# playwright_test

./: .gitignore  README.md  conftest.py  hello_playwright.py  pyproject.toml  pytest.ini  readed.md  requirements.txt
.github/workflows/: ci.yml  debug-feishu.yml  debug-report.yml  deploy-pages.yml  first.yml
.github/workflows/reusable/: python-env.yml  run-playwright.yml
TestCase/: test_add_to_cart.py  test_checkout.py  test_login.py  test_login_out.py
config/: config.yaml  config_reader.py
pages/: __init__.py  base_page.py  checkout_page.py  login_page.py  product_page.py
test_data/: login_data.yaml  test_add_to_cart.yaml  test_checkout.yaml
utils/: logger.py
